[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PlayerScript.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/portmanteau/portmanteau_regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="PlayerHead" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )

[node name="PlayerCamera" type="Camera" parent="PlayerHead"]

[node name="RayCast" type="RayCast" parent="PlayerHead"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true

[node name="CollisionBodyCapsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="UI" type="Node" parent="."]

[node name="UI2" type="Node2D" parent="."]

[node name="CropLabels" type="Node2D" parent="UI2"]
position = Vector2( 32, 800 )

[node name="CropStatusLabel" type="Label" parent="UI2/CropLabels"]
margin_top = 40.0
margin_right = 348.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "Status: DAMAGED"

[node name="CropHealthLabel" type="Label" parent="UI2/CropLabels"]
margin_right = 348.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Health: 100 %"
